fix scrolling header covering the sections it scrolls to

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -30,7 +30,7 @@
   }
 }
 
-#huge-break {
+.huge-break {
   height: 1000px;
 }
 
@@ -68,5 +68,14 @@ ul.menu {
     &:hover {
       background-color: rgba(0, 0, 0, .2);
     }
+  }
+}
+
+.featured {
+  h1 {
+    font-size: 3em;
+    font-weight: 200;
+    font-family: Lato, sans-serif;
+    line-height: 100%;
   }
 }
